# ocalc

./: .gitignore  .main.ml.swo  .merlin  .vimrc  GrandQ.ml  Makefile  Makefile.options  OCalc.opam  README  README.md  accueil.eliom  charges.eliom  close_x.bat  compile.bat  compile.ml  contact.eliom  create-release.sh  diviser.ml  dune  dune-project  equation.ml  equation0.equ  equation1.equ  equation2.equ  equation3.equ  equation4.equ  equation5.equ  equation6.equ  grandEntier.ml  grandEntier.mli  grandReel_on.ml  grandReel_on.mli  install_deps.bat  interface.ml  interprete.ml  launch.bat  launch_x.bat  lexer.ml  list.c  main.c  (+16 more)
.atom/: ide-reason.json
assets/: 404.html  dune  include.math  index.html  index.js
src/: main.ml
src/header/: lexer.mli  type.mli  utils.mli
src/interface/off/: topCmd.ml
src/interface/on/: topCmd.ml  topCmd.mli
src/interfaces/: commune.ml  dune  topCmd.ml  topCmd_off.ml  topCmd_on.ml  topGui.ml  topGui_on.ml  topGui_on.mli  topTest.ml  topTest_on.ml
src/modules/: I18n.ml  I18n.mli  dune  grandEntier_off.ml  grandEntier_off.mli  grandEntier_on.ml  grandEntier_on.mli  grandNum_on.ml  grandNum_on.mli  grandRationnel_on.ml  grandReel_on.ml  grandReel_on.mli  matrix.ml  matrix.mli
src/noyau/: ancien_moteur.ml  ancien_moteur.mli  dune  lexer.ml  lexer.mli  lien.ml  moteur.ml  moteur.mli  nouveau_lexer.ml  nouveau_lexer.mli  nouveau_moteur.ml  nouveau_parser.ml  nouveau_parser.mli  nouveau_type.ml  parser.ml  parser.mli  type.ml  type.mli  utils.ml  utils.mli
static/css/: ocalc.css
www/: index.html
